Small doc tweaks

--- a/docs/source/example2.ipynb
+++ b/docs/source/example2.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This provides a more advanced example of interaction between NetLogo and a Python environment, using the SALib library (Herman & Usher, 2017; available through the pip package manager) to sample and analyze a suitable experimental design for a Sobol global sensitivity analysis. Furthermore, the ipyparallel package (also available on pip) is used to parallelize the simulations.\n",
     "\n",
-    "An interactive Jupyter notebook version, as well as the model files used in the example, are available from the pyNetLogo repository at https://github.com/quaquel/pyNetLogo."
+    "All files used in the example are available from the pyNetLogo repository at https://github.com/quaquel/pyNetLogo."
    ]
   },
   {
@@ -420,6 +420,13 @@
    ],
    "source": [
     "results.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  "
    ]
   },
   {
