Changed imports in examples

--- a/src/examples/pyNetLogo demo - SALib parallel.ipynb
+++ b/src/examples/pyNetLogo demo - SALib parallel.ipynb
@@ -43,8 +43,7 @@
     "sns.set_style('white')\n",
     "sns.set_context('talk')\n",
     "\n",
-    "import jpype\n",
-    "import pyNetLogo.pyNetLogo\n",
+    "import pyNetLogo\n",
     "\n",
     "#Import the sampling and analysis modules for a Sobol variance-based \n",
     "#sensitivity analysis\n",
@@ -271,12 +270,10 @@
     "import os\n",
     "os.chdir(cwd)\n",
     "\n",
-    "import jpype\n",
-    "import pyNetLogo.pyNetLogo\n",
+    "import pyNetLogo\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
-    "netlogo = pyNetLogo.pyNetLogo.NetLogoLink(gui=False)\n",
+    "netlogo = pyNetLogo.NetLogoLink(gui=False)\n",
     "netlogo.load_model(r'Wolf Sheep Predation_v6.nlogo')"
    ]
   },
